# clock

./: .gitignore  Cargo.toml  README.md  mac_idle.sh  projects.txt
src/: logic.rs  main.rs  ui.rs
