[package]
name = "clock"
version = "0.1.0"
authors = ["smokytheangel0 <j.m.a.kierstead@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.6.0"
termion = "1.5.2"
unicode-width = "0.1.5"
rand = "0.6.5"
failure = "0.1.5"
rusqlite = "0.18.0"
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "1.0.91"
chrono = "0.4.6"
indexmap = {version = "1.0.2", features = ["serde-1"]}
google-drive3 = "1.0.8"
hyper = "^0.10"
hyper-rustls = "^0.6"
yup-oauth2 = "^1.0"
self_update = "0.5.1"
openssl-sys = "*"

[features]
vendored = ["openssl-sys/vendored"]

